# cheesecalc

./: CHANGELOG.md  Cargo.nix  Cargo.toml  README.md  cog.toml  flake.nix  index.html  site.webmanifest  treefmt.toml
.github/workflows/: release.yaml
crates/cheesecalc/: Cargo.toml
crates/cheesecalc/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  main.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
flake-parts/: cargo.nix  ci.nix  formatting.nix  web.nix
public/: index.html
src/: main.rs
wasm/: cheesecalc_wasm.d.ts  cheesecalc_wasm.js  cheesecalc_wasm_bg.wasm  cheesecalc_wasm_bg.wasm.d.ts
