[package]
name = "cheesecalc"
description = "Calculations for sodium citrate mac and cheese"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[dependencies]
serde = { workspace = true }
# serde_json = "1.0.87"
# thiserror = { workspace = true }
# tokio = { workspace = true }
# tracing = { workspace = true }
