[package]
name = "cheesecalc-cli"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cheesecalc = { path = "../cheesecalc" }
clap = { version = "4.0.19", features = ["derive"] }
